Insertion of Note made

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Safetrade</title>
+    <title>Evernote</title>
 </head>
 <body>
 <div>
-    <h1>SafeTrade</h1>
+    <h1>Evernote</h1>
     <a href="/register">Register New User</a>
     <!-- LOGIN -->
-    <a href="/login">Login</a>
+    <a href="/myNotes">My Notes</a>
+    <a href="/logout">Logout</a>
 </div>
 
 </body>
