--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Evernote</title>
+    <!-- Bootstrap core CSS -->
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous" />
 </head>
-<body>
-<div>
-    <h1>Evernote</h1>
-    <a href="/register">Register New User</a>
-    <!-- LOGIN -->
-    <a href="/myNotes">My Notes</a>
-    <a href="/logout">Logout</a>
+<body class="gray-bg">
+<div class="container">
+    <div class="col-md-12 text-center">
+        <h1>Evernote</h1>
+        <p></p>
+        <a href="/myNotes" class="btn btn-primary">My Notes</a>
+        <a href="/logout" class="btn btn-primary">Logout</a>
+    </div>
 </div>
 
 </body>
