--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Register User</title>
+    <!-- Bootstrap core CSS -->
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous" />
 </head>
-<body>
+<body class="gray-bg">
+
 <form autocomplete="off" action="#" th:action="@{/createAccount}" th:object="${accountDTO}" method="post">
     <div class="container">
-        <h1>Register</h1>
-        <p>Please fill in this form to create an account.</p>
-        <hr>
-        <label for="email"><b>Email</b></label>
-        <input type="email" id="email" name="email" placeholder="email">
-        <label for="password"><b>Password</b></label>
-        <input type="password" id="password" placeholder="Enter Password" name="password" required>
-        <label for="password_repeat"><b>Repeat Password</b></label>
-        <input type="password" id="password_repeat" placeholder="Repeat Password" name="password_repeat" required>
-        <hr>
-        <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-        <button type="submit" class="registerbtn">Register</button>
+        <div class="col-md-12 text-center">
+            <h1>Register</h1>
+            <p>Please fill in this form to create an account.</p>
+            <hr>
+            <label for="email"><b>Email</b></label>
+            <input type="email" id="email" name="email" placeholder="email">
+            <label for="password"><b>Password</b></label>
+            <input type="password" id="password" placeholder="Enter Password" name="password" required>
+            <label for="password_repeat"><b>Repeat Password</b></label>
+            <input type="password" id="password_repeat" placeholder="Repeat Password" name="password_repeat" required>
+            <hr>
+            <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+            <button type="submit" class="btn btn-primary">Register</button>
+        </div>
     </div>
 
 <div class="container signin">
