--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,34 +4,33 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <!-- Bootstrap core CSS -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body class="gray-bg">
 <div class="container">
     <div class="col-md-12 text-center">
-    <h1>Login</h1>
-    <div class="wrapper fadeInDown">
-        <div id="formContent">
-            <!-- Login Form -->
-            <form autocomplete="off" action="#" th:action="@{/performLogin}" th:object="${account}" method="POST">
-                <input type="email" id="login" name="email" placeholder="email">
-                <p></p>
-                <input type="password" id="password" name="password" placeholder="password">
-                <p></p>
-                <input type="submit" class="fadeIn fourth" value="Submit">
-            </form>
-            <a href="/register">Register New User</a>
-            <!-- Remind Passowrd -->
-            <div id="formFooter">
-                <a class="underlineHover" href="#">Forgot Password?</a>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Evernote.svg" alt="MyEvernote" width="400" height="400">
+        <h1>MyEvernote</h1>
+        <h3>Login</h3>
+        <div class="wrapper fadeInDown">
+            <div id="formContent">
+                <!-- Login Form -->
+                <form autocomplete="off" action="#" th:action="@{/performLogin}" th:object="${account}" method="POST">
+                    <input type="email" id="login" name="email" placeholder="email">
+                    <p></p>
+                    <input type="password" id="password" name="password" placeholder="password">
+                    <p></p>
+                    <input type="submit" class="btn btn-primary" value="Sign In">
+                </form>
+                <a href="/register">Register New User</a>
+                <!-- Remind Passowrd -->
+                <div id="formFooter">
+                    <a class="underlineHover" href="#">Forgot Password?</a>
+                </div>
+
+
             </div>
-
-
         </div>
-    </div>
     </div>
 </div>
 </body>
