--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <title>Register User</title>
     <!-- Bootstrap core CSS -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body class="gray-bg">
 
 <form autocomplete="off" action="#" th:action="@{/createAccount}" th:object="${accountDTO}" method="post">
     <div class="container">
         <div class="col-md-12 text-center">
-            <h1>Register</h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Evernote.svg" alt="MyEvernote" width="500" height="500">
+            <h1>MyEvernote</h1>
+            <h3>Register</h3>
             <p>Please fill in this form to create an account.</p>
             <hr>
+            <label for="username"><b>Username</b></label>
+            <input type="username" id="username" name="username" placeholder="username">
             <label for="email"><b>Email</b></label>
             <input type="email" id="email" name="email" placeholder="email">
             <label for="password"><b>Password</b></label>
