--- a/src/main/resources/templates/registersuccess.html
+++ b/src/main/resources/templates/registersuccess.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>MyEvernote</title>
+    <title>Evernote</title>
     <!-- Bootstrap core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
@@ -11,10 +11,8 @@
     <div class="col-md-12 text-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Evernote.svg" alt="MyEvernote" width="400" height="400">
         <h1>MyEvernote</h1>
-        <p th:text="${greeting}"> </p>
-        <a href="/logout" class="btn btn-primary">Logout</a>
-        <a href="/myNotes" class="btn btn-primary">My Notes</a>
-
+        <p>You've registered successfully!</p>
+        <a href="/login" class="btn btn-primary">Login</a>
     </div>
 </div>
 
