--- a/src/main/resources/templates/myNotes.html
+++ b/src/main/resources/templates/myNotes.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>My Notes</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"></head>
-    <!--<script type="text/javascript" th:src="@{/js/src/requests.js}" /> -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script type="text/javascript" th:src="@{/js/src/requests.js}"></script>
+</head>
+
 <body class="gray-bg">
 <div class="container">
     <div class="col-md-12 text-center" position="center">
@@ -28,12 +31,13 @@
             </div>
         </form>
     </div>
+
     <div class="container">
         <div class="card-body" th:each="note : ${notes}">
             <div class="card" style="width: 18rem;">
                 <h5><textarea class="card-title" th:text="${note.name}">Note title</textarea></h5>
                 <p class="card-title" th:text="${note.date}"></p>
-                <textarea id="${note.id}" class="card-text" th:text="${note.description}"></textarea>
+                <textarea th:id="${note.id}" class="card-text" th:text="${note.description}"></textarea>
                 <a href="#"  th:href="@{myNotes/delete/} + ${note.id}" th:method="get" class="btn btn-primary">Delete</a>
                 <!--<a href="#"  th:href="@{/editNote/} + ${note.id}" th:method="put" class="btn btn-primary">Save</a>-->
             </div>
